--- a/frontend/src/components/TaskItem/TaskItem.module.scss
+++ b/frontend/src/components/TaskItem/TaskItem.module.scss
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  font-size: 30px;
+  font-size: 20px;
 }
 
 p {
@@ -9,11 +9,16 @@ p {
 }
 
 .content {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  gap: 30px;
+  // display: flex;
+  // justify-content: space-between;
+  // align-items: flex-start;
+  // gap: 30px;
   border: solid 2px red;
+  display: grid;
+  // justify-content: center;
+  grid-template-columns: 2fr 1fr auto auto auto auto; /* checkbox, title, category, icon1, icon2, icon3 */
+  // gap: 12px 16px; /* row gap, column gap */
+  align-items: flex-start;
 
   &_wrapper {
     display: flex;
@@ -24,6 +29,7 @@ p {
   &_details {
     display: flex;
     flex-direction: column;
+    flex: 2;
   }
 
   &_duedate {
@@ -37,11 +43,51 @@ p {
   }
 }
 
-#checkbox {
-  border-radius: 50%;
+.checkbox {
+  margin-right: 15px;
+  width: 22px;
+  height: 22px;
 }
 
-.icons {
+// .checkbox {
+//   appearance: none;
+//   border: 2px solid #444;
+//   width: 20px;
+//   height: 20px;
+//   border-radius: 50%;
+//   cursor: pointer;
+//   position: relative;
+// }
+
+// .checkbox:hover::after {
+//   content: "✓";
+//   transition: 0.2s ease-in-out;
+//   position: absolute;
+//   top: 50%;
+//   left: 50%;
+//   transform: translate(-50%, -50%);
+//   color: #444;
+// }
+
+// .checkbox:checked {
+//   background-color: #444;
+//   border-color: #444;
+// }
+
+// .checkbox:checked::after {
+//   content: "✓";
+//   position: absolute;
+//   top: 50%;
+//   left: 50%;
+//   transform: translate(-50%, -50%);
+//   color: #fff;
+// }
+
+.btns_container {
   display: flex;
   gap: 10px;
+}
+
+.btns {
+  cursor: pointer;
 }
