--- a/frontend/src/containers/TaskContainer/TaskContainer.module.scss
+++ b/frontend/src/containers/TaskContainer/TaskContainer.module.scss
@@ -1,4 +1,16 @@
 h1 {
   letter-spacing: 5px;
   font-weight: 600;
+  margin-top: 0;
 }
+
+.tasks_container {
+  padding: 40px;
+  background-color: #f5f5f5;
+  width: 70%;
+}
+
+// .inner_container {
+//   background-color: #f5f5f5;
+//   height: 100%;
+// }
