adds useEffect to display completed tasks as checked on mount

--- a/frontend/src/components/SideBarItem/SideBarItem.module.scss
+++ b/frontend/src/components/SideBarItem/SideBarItem.module.scss
@@ -6,7 +6,7 @@
   align-items: center;
   padding: 8px 12px;
   background-color: #c9c9c9;
-  border: solid 2px red;
+  // border: solid 2px red;
 }
 
 .inactive {
@@ -15,7 +15,7 @@
   align-items: center;
   padding: 8px 12px;
   cursor: pointer;
-  border: solid 2px red;
+  // border: solid 2px red;
 }
 
 .inactive:hover {
