--- a/frontend/src/components/TaskItem/TaskItem.module.scss
+++ b/frontend/src/components/TaskItem/TaskItem.module.scss
@@ -13,7 +13,7 @@ p {
   // justify-content: space-between;
   // align-items: flex-start;
   // gap: 30px;
-  border: solid 2px red;
+  // border: solid 2px red;
   display: grid;
   // justify-content: center;
   grid-template-columns: 2fr 1fr auto auto auto auto; /* checkbox, title, category, icon1, icon2, icon3 */
@@ -25,12 +25,14 @@ p {
     flex-direction: row;
     align-items: flex-start;
   }
+}
 
-  &_details {
-    display: flex;
-    flex-direction: column;
-    flex: 2;
-  }
+.task {
+  // &_details {
+  display: flex;
+  flex-direction: column;
+  flex: 2;
+  // }
 
   &_duedate {
     display: inline-flex;
@@ -39,49 +41,66 @@ p {
     align-items: center;
     font-size: 0.8rem;
 
-    border: solid 2px green;
+    // border: solid 2px green;
   }
 }
 
+// .checkbox {
+//   margin-right: 15px;
+//   width: 22px;
+//   height: 22px;
+// }
+
 .checkbox {
-  margin-right: 15px;
-  width: 22px;
-  height: 22px;
+  // margin-right: 15px;
+  width: 25px;
+  height: 25px;
+  appearance: none;
+  border-radius: 50%;
+  // accent-color: #4caf50;
+  border: 2px solid #444;
+  cursor: pointer;
+  position: relative;
 }
 
-// .checkbox {
-//   appearance: none;
-//   border: 2px solid #444;
-//   width: 20px;
-//   height: 20px;
-//   border-radius: 50%;
-//   cursor: pointer;
-//   position: relative;
-// }
+.checkbox:hover::after {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  // accent-color: #4caf50;
+  // transition: 0.2s;
+  // background-color: #444;
+  // color: #fff;
 
-// .checkbox:hover::after {
-//   content: "✓";
-//   transition: 0.2s ease-in-out;
-//   position: absolute;
-//   top: 50%;
-//   left: 50%;
-//   transform: translate(-50%, -50%);
-//   color: #444;
-// }
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  // color: #444;
+}
 
-// .checkbox:checked {
-//   background-color: #444;
-//   border-color: #444;
-// }
+.checkbox:checked {
+  background-color: #444;
 
-// .checkbox:checked::after {
-//   content: "✓";
-//   position: absolute;
-//   top: 50%;
-//   left: 50%;
-//   transform: translate(-50%, -50%);
-//   color: #fff;
-// }
+  // width: 25px;
+  // height: 25px;
+  // border-radius: 50%;
+}
+.checkbox:checked + .task_text {
+  text-decoration: line-through;
+}
+
+.checkbox:checked::after {
+  content: "✓";
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-40%, -40%);
+  color: #fff;
+}
 
 .btns_container {
   display: flex;
