--- a/frontend/src/containers/SideBarContainer/SideBarContainer.module.scss
+++ b/frontend/src/containers/SideBarContainer/SideBarContainer.module.scss
@@ -3,27 +3,13 @@
   background-color: #a89a8e;
   height: 100vh;
   padding: 15px;
-  border: solid 2px blue;
+  // border: solid 2px blue;
 }
 
 .heading {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.add_btn {
-  all: unset;
-  cursor: pointer;
-  font-size: 1.5rem;
-  transition: transform 0.2s ease-in-out;
-  :hover {
-    background-color: #c9c9c9;
-    transform: scale(1.8);
-  }
-  // padding: 10px;
-  // height: 25px;
-  border: solid 2px red;
 }
 
 h2 {
