--- a/frontend/src/components/TaskForm/TaskForm.module.scss
+++ b/frontend/src/components/TaskForm/TaskForm.module.scss
@@ -1,7 +1,9 @@
 .form {
   display: grid;
-  // justify-content: center;
-  grid-template-columns: 1.5fr 1fr auto;
+  // justify-content: flex-start;
+  grid-template-columns: 1.5fr 1fr auto auto;
+
+  // align-items: flex-start;
 
   &_description {
     display: flex;
@@ -10,12 +12,35 @@
     align-items: center;
   }
 
+  // &_taskdesc {
+  //   display: flex;
+  //   flex-direction: column;
+  //   border: solid 2px red;
+  // }
+
   &_duedate {
     display: flex;
-    // justify-content: center;
+    // justify-content: flex-start;
+    align-self: flex-start;
     align-items: center;
     gap: 3px;
   }
+}
+
+.text_error_wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+  // border: solid 2px rgb(240, 7, 7);
+}
+
+.error {
+  color: rgb(209, 77, 77);
+  font-weight: 500;
+}
+
+#category {
+  width: 50px;
 }
 
 .add_btn {
@@ -29,4 +54,9 @@
     // background-color: darken($button-background, 10%);
     // transform: scale(1.8);
   }
+}
+
+.icons {
+  font-size: 1.5rem;
+  margin-left: 8px;
 }
