--- a/frontend/src/containers/TaskContainer/TaskContainer.module.scss
+++ b/frontend/src/containers/TaskContainer/TaskContainer.module.scss
@@ -21,11 +21,14 @@ h1 {
   font-size: 1.2rem;
   transition: transform 0.2s ease-in-out;
   margin-right: 13px;
-  // border: solid 1px #524942;
-  // border-radius: 20px;
   :hover {
     color: #524942;
-    // background-color: darken($button-background, 10%);
-    // transform: scale(1.8);
   }
+}
+
+.task_display {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 10px;
 }
