--- a/frontend/src/components/TaskItem/TaskItem.module.scss
+++ b/frontend/src/components/TaskItem/TaskItem.module.scss
@@ -1,63 +1,40 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  font-size: 20px;
-}
-
 p {
   margin: 0;
 }
 
 .content {
-  // display: flex;
-  // justify-content: space-between;
-  // align-items: flex-start;
-  // gap: 30px;
-  // border: solid 2px red;
+  font-size: 20px;
   display: grid;
-  // justify-content: center;
-  grid-template-columns: 2fr 1fr auto auto auto auto; /* checkbox, title, category, icon1, icon2, icon3 */
-  // gap: 12px 16px; /* row gap, column gap */
+  grid-template-columns: 2fr 1fr auto auto auto auto;
   align-items: flex-start;
 
   &_wrapper {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
+    gap: 15px;
   }
 }
 
 .task {
-  // &_details {
   display: flex;
   flex-direction: column;
   flex: 2;
-  // }
 
   &_duedate {
     display: inline-flex;
-    // justify-content: center;
     gap: 5px;
     align-items: center;
     font-size: 0.8rem;
-
-    // border: solid 2px green;
   }
 }
 
-// .checkbox {
-//   margin-right: 15px;
-//   width: 22px;
-//   height: 22px;
-// }
-
 .checkbox {
-  // margin-right: 15px;
+  align-self: center;
   width: 25px;
   height: 25px;
   appearance: none;
   border-radius: 50%;
-  // accent-color: #4caf50;
   border: 2px solid #444;
   cursor: pointer;
   position: relative;
@@ -67,26 +44,18 @@ p {
   width: 25px;
   height: 25px;
   border-radius: 50%;
-  // accent-color: #4caf50;
-  // transition: 0.2s;
-  // background-color: #444;
-  // color: #fff;
 
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  // color: #444;
 }
 
 .checkbox:checked {
   background-color: #444;
-
-  // width: 25px;
-  // height: 25px;
-  // border-radius: 50%;
 }
-.checkbox:checked + .task_text {
+
+.content_wrapper:has(.checkbox:checked) .task_text {
   text-decoration: line-through;
 }
 
@@ -108,5 +77,6 @@ p {
 }
 
 .btns {
+  border: none;
   cursor: pointer;
 }
